# bmicalc

./: CMakeLists.txt  README.md  bmi.cpp  bmi1.h  bmi_graphwidget.cpp  bmi_graphwidget.h  bmi_graphwidget.h.txt  bmi_recommendationwidget.cpp  bmi_recommendationwidget.h  mainwindow.cpp  mainwindow.h  mainwindow.ui
